<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tammy.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/whippedCreamCheckBox"
            style="@style/checkbox"
            android:text="@string/whippedcream" />

        <CheckBox
            android:id="@+id/chocolateCheckBox"
            style="@style/checkbox"
            android:text="@string/chocolate" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/buttons"
                android:onClick="decrement"
                android:text="@string/subtract" />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/quantity_display"
                android:text="@string/digit"/>

            <Button
                style="@style/buttons"
                android:onClick="increment"
                android:text="@string/add"/>

        </LinearLayout>

        <Button
            style="@style/order_button"
            android:onClick="submitOrder"
            android:text="@string/order"/>

    </LinearLayout>

</ScrollView>